<resources>
    <string name="app_name">NetRunner android</string>
    <string name="doc_ai_logo">Doc.ai logo</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="gpu">GPU</string>
    <string name="cpu">CPU</string>
    <string name="modelLabel">Model</string>
    <string name="deviceLabel">Device</string>
    <string name="mobilenetV1Quant">mobilenet v1 quant</string>;
    <string name="mobilenetV1Float">mobilenet v1 float</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currentTab">currentTab</string>
    <string name="live_camera_menu_item_title">Live camera</string>
    <string name="bulk_classification_menu_item_title">Bulk classification</string>
    <string name="benchmark_menu_item_title">Benchmark</string>
    <string name="model_menu_item_title">Model</string>
    <string name="device_menu_item_title">Accelerator</string>
    <string name="threads_menu_item_title">Threads</string>
    <string name="precision_menu_item_title">Use 16 bit floating point</string>
    <string name="active_fragment_tag">active_fragment</string>
</resources>
